index.css
body {
	font-family: 'Exo 2', sans-serif;
	color: #FFFFFF;
	background: #101013;
	font-size: 16px;
	margin: 0px;
	overflow-x: hidden;
	overflow-y: scroll;
	padding-bottom: 60px;
}

.pageBody {
	display: flex;
	width: 80%;
	margin-left: auto;
	margin-right: auto;
}

.bodyMain {
	display:inline-block;
	width: 100%;
	margin-top: 20px;
	
}

.bodySidebar {
	display: block;
	width: 30%;
	margin-top: 20px;
	margin-left: 20px;
}

.pageHeader {
	display:inline-block;
	background-position: top;
	background-size: auto;
	background-repeat: repeat;
	background-color: #151b26;
	height: 46px;
	width: 100%;
}
.comments
{
	width: 80%;
}
h2 
{
	text-transform: uppercase;
	text-shadow: 1px 1px 4px black;
}
h5  
{
	display: inline list-item;
	color: #BDBD8C;
	margin-bottom: 0px;
	text-shadow: 1px 1px 4px black;
}
p  
{
	margin-top: 0px;
	white-space: pre-wrap;
	tab-size: 0;
	text-shadow: 1px 1px 4px black;
}

b {
	color: #BDBD8C;
	letter-spacing: -4px;
}

b:hover {
	cursor: default;
}

.pageHeaderText {
	padding-left: .75rem !important;
	padding-right: .75rem !important;
}

.cardHeader {
	margin: 0px;
	padding: 10px;
	font-size: 12pt;
	text-align: center;
	color: #BDBD8C;
	background-color: #262b37;
	font-style: italic;
	font-weight: 900;
	border-bottom: 2px solid black;
}
.card {
	background-color: #151b26;
}

.cardContent {
	padding: 20px;
	border-bottom: 2px solid black;
}

.sidebarCard {
	background-color: #151b26;
}

.sidebarCardContent {
	padding: 20px;
}

h2 {
	flex: 1;
}

A:link {
	text-decoration: none;
	color: #BDBD8C;
}

A:hover {
	text-decoration: none;
	color: #FFFFFF !important;
}

A:visited {
	text-decoration: none;
	color: #BDBD8C;
}

.tabLinks {
	font-family: 'Exo 2', sans-serif;
	border: 0px;
	padding: 6px 10px;
	background-color: #1d212b;
	color: #575757;
	cursor: pointer;
	font-weight: bold;
	letter-spacing: .5px;
}

.tabLinks.active {
	background-color: #262b37;
	color: #f1f1f1;
}

.tabLinks:hover {
	color: white;
}

.zoom {
	animation: zoom 2s ease infinite;
}

.imageButton
{
	height: 220px;
	width: 220px;
	z-index: 2;
	margin: 4px;
}


#visContent
{
	display: inline-grid;
	height: 100%;
	width: 100%;
	object-position: 50% 20%;
	object-fit: cover;
}

.modal
{
	display: none;
	position: fixed;
	z-index: 1;
	padding: 25px;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	background-color: rgb(0,0,0);
	background-color: rgba(0,0,0,0.9);
}

.modal-content
{
	margin: auto;
	display: block;
	width: auto !important;
	height: 75% !important;
	-webkit-animation: fadeIn 100ms linear forwards;
    animation: fadeIn 100ms linear forwards;
}

.close
{
	position: absolute;
	cursor: pointer;
	top: 10px;
	right: 80px;
	color: #f1f1f1;
	font-size: 80px;
	font-weight: bold;
	transition: 0.3s;
}

::-webkit-scrollbar {width: 4px;}
::-webkit-scrollbar-track {background: #212121;}
::-webkit-scrollbar-thumb {background: #ffffff50;}

@keyframes fadeIn {
  0% { opacity: 0; }
  100% { opacity: 1; }
}

@keyframes zoom {
	0% {
		transform: scale(1, 1);
	}
	50% {
		transform: scale(1.2, 1.2);
	}
	100% {
		transform: scale(1, 1);
	}
}


#frame { width: 133%; height: 133%;}
#frame { zoom: 0.75; -moz-transform: scale(0.75); -moz-transform-origin: 0 0; }

@media (max-width: 1000px) {
    .bodySidebar {
        display: none;
    }
	.pageBody {
		width: 95%;
	}
}

